--- a/{{cookiecutter.package_name}}/requirements-dev.txt
+++ b/{{cookiecutter.package_name}}/requirements-dev.txt
@@ -1,10 +1,11 @@
-pip
+black
 bumpversion
-wheel
-flake8
-tox
 coverage
-Sphinx
-twine
+flake8
+pip
 pytest
 pytest-runner
+Sphinx
+tox
+twine
+wheel
