fixed how setuptools tests are executed

--- a/{{cookiecutter.package_name}}/tox.ini
+++ b/{{cookiecutter.package_name}}/tox.ini
@@ -12,6 +12,9 @@ basepython = python
 deps = flake8
 commands = flake8 {{ cookiecutter.package_name }}
 
+[pytest]
+addopts = --basetemp={envtmpdir}
+
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
@@ -22,4 +25,4 @@ deps =
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir}
+    python setup.py test
